find_package(Doxygen REQUIRED)

if (DOXYGEN_ENABLE_WARNINGS)
	set(DOXYGEN_ENABLE_WARNING_FLAG "TRUE")
else()
	set(DOXYGEN_ENABLE_WARNING_FLAG "FALSE")
endif()

set(DOXYGEN_INPUT_DIR ${PROJECT_SOURCE_DIR})
set(DOXYGEN_CONFIGURED_INPUT_DIR ${APPLICATION_OUTPUT_DIR}/configured)
set(DOXYGEN_CONFIGURED_INPUT ${DOXYGEN_CONFIGURED_INPUT_DIR}/doxyfile)

if (DOXYGEN_DOT_FOUND)
	set(DOXYGEN_USE_DOT "YES")
else()
	set(DOXYGEN_USE_DOT "NO")
endif()

configure_file(${DOXYGEN_INPUT_DIR}/doc/doxyfile.in ${DOXYGEN_CONFIGURED_INPUT} @ONLY)

add_custom_target(doc ALL
                  COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_CONFIGURED_INPUT}
                  WORKING_DIRECTORY ${DOXYGEN_INPUT_DIR})
